--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create a new article</h1>
+<h1>Edit article</h1>
 
 <% if @article.errors.any? %>
   <h2>The following erros prevented the article from being saved</h2>
@@ -11,8 +11,8 @@
   </ul>
 <% end %>
 
-<%# scope defines what we are working with, we need to provide article model as symbol,  articles_path -> articles#index, using standard http post instead of AJAX %>
-<%= form_with scope: :article, url: articles_path, local: true do |f|%>
+<%#  having model used will prepopulate inputs with article data, and once clicked to be updated, rails smart enough to direct a user to update action%>
+<%= form_with(model: @article, local: true) do |f|%>
 
   <p>
     <%= f.label :title %></br>
