--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,3 +3,8 @@
 <p><strong>Title: </strong><%= @article.title %></p>
 
 <p><strong>Description: </strong><%= @article.description %></p>
+
+<%# Rails is smart enough to get id from the instance variable in this case %>
+<%= link_to 'Edit', edit_article_path(@article) %> |
+<%= link_to 'Delete', article_path(@article), method: :delete, data: {confirm: 'Are you sure?'} %> |
+<%= link_to 'Return to article listings', articles_path %>
