--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,4 @@
-@import 'bootstrap/dist/css/bootstrap';
+@import "bootstrap/dist/css/bootstrap";
 
 .navbar {
   background-color: black !important;
@@ -22,7 +22,7 @@
 }
 
 .jumbotron {
-  background-image: url('jumbo-copy.jpeg');
+  background-image: url("jumbo-copy.jpeg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
