--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,26 +1,31 @@
-<h1>Articles listing page</h1>
+<div id="page-content">
+  <h1 class="text-center mt-4">Listing all articles</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
+  <div class="container">
     <% @articles.each do |a| %>
-      <tr>
-        <td><%= a.title %></td>
-        <td><%= a.description %></td>
-        <td><%= link_to 'Show', article_path(a) %></td>
-        <td><%= link_to 'Edit', edit_article_path(a) %></td>
-        <%# creating a link and providing a url path for an article to be deleted, rails is smart enough to get an id from article(a) argument -> object, but we have to specify the method for the request to be "DELETE", here we use verb as a symbol %>
-        <td><%= link_to 'Delete', article_path(a), method: :delete, data: {confirm: 'Are you sure?'} %></td>
-      </tr>
+      <div class="row justify-content-md-center">
+        <div class="col-8 mt-4">
+          <div class="card text-center shadow mb-5 bg-white rounded">
+            <div class="card-header font-italic">
+              by Anton Montrezor
+            </div>
+            <div class="card-body">
+              <h5 class="card-title"><%= link_to a.title, article_path(a), class: 'text-success' %></h5>
+              <%# to cut off some part of description and leave a portion to be visible we use truncate method %>
+              <p class="card-text"><%= truncate(a.description, length: 100) %></p>
+              <%= link_to 'View', article_path(a), class: 'btn btn-outline-success' %>
+              <%= link_to 'Edit', edit_article_path(a), class: 'btn btn-outline-info' %>
+              <%= link_to 'Delete', article_path(a), method: :delete, class: 'btn btn-outline-danger' %>
+            </div>
+            <div class="card-footer text-muted">
+              <%# using helper method time_ago_in_words to display date in human readable format %>
+              <small>
+                Created <%= time_ago_in_words(a.created_at) %> ago, edited <%= time_ago_in_words(a.updated_at) %> ago
+              </small>
+            </div>
+          </div>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
-
-<p><%= link_to 'Create new article', new_article_path %></p>
-
+  </div>
+</div>
