--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,29 +1,33 @@
-<% if @article.errors.any? %>
-  <h2>The following erros prevented the article from being saved</h2>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li>
-        <%= msg %>
-      </li>
-    <% end %>
-  </ul>
-<% end %>
+<div class="container">
+  <%# we have to specify a folder if a partial is not in the same folder as _form partial %>
 
-<%#  having model used will prepopulate inputs with article data, and once clicked to be updated, rails smart enough to direct a user to update action%>
-<%= form_with(model: @article, local: true) do |f|%>
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <%= render 'shared/errors' %>
+      <%#  having model used will prepopulate inputs with article data, and once clicked to be updated, rails smart enough to direct a user to update action%>
+      <%= form_with(model: @article, class: 'shadow p-3 mb-3 bg-secondary rounded', local: true) do |f|%>
+        <div class="form-group row">
+          <%= f.label :title, class: 'col-2 col-form-label text-light' %>
+          <div class="col-10">
+            <%= f.text_field :title, class: 'form-control shadow rounded text-dark', placeholder: 'Title of article' %>
+          </div>
+        </div>
 
-  <p>
-    <%= f.label :title %></br>
-    <%= f.text_field :title %>
-  </p>
+        <div class="form-group row">
+          <%= f.label :description, class: 'col-2 col-form-label text-light' %>
+          <div class="col-10">
+            <%= f.text_area :description, rows: 10, placeholder: 'Description of article', class: 'form-control shadow rounded text-dark' %>
+          </div>
+        </div>
 
-  <p>
-    <%= f.label :description %></br>
-    <%= f.text_area :description %>
-  </p>
+        <div class="form-group row justify-content-center">
+          <%= f.submit class: 'btn btn-outline-light btn-lg' %>
+        </div>
 
-  <p>
-    <%= f.submit%>
-  </p>
-
-<% end %>
+      <% end %>
+    </div>
+    <div class="mb-3">
+      <%= link_to '[ Cancel and return to article listings ]', articles_path, class: 'text-dark' %>
+    </div>
+  </div>
+</div>
