--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,31 +1,29 @@
-<div id="page-content">
-  <h1 class="text-center mt-4">Listing all articles</h1>
-
-  <div class="container">
-    <% @articles.each do |a| %>
-      <div class="row justify-content-md-center">
-        <div class="col-8 mt-4">
-          <div class="card text-center shadow mb-5 bg-white rounded">
-            <div class="card-header font-italic">
-              by Anton Montrezor
-            </div>
-            <div class="card-body">
-              <h5 class="card-title"><%= link_to a.title, article_path(a), class: 'text-success' %></h5>
-              <%# to cut off some part of description and leave a portion to be visible we use truncate method %>
-              <p class="card-text"><%= truncate(a.description, length: 100) %></p>
-              <%= link_to 'View', article_path(a), class: 'btn btn-outline-success' %>
-              <%= link_to 'Edit', edit_article_path(a), class: 'btn btn-outline-info' %>
-              <%= link_to 'Delete', article_path(a), method: :delete, class: 'btn btn-outline-danger' %>
-            </div>
-            <div class="card-footer text-muted">
-              <%# using helper method time_ago_in_words to display date in human readable format %>
-              <small>
-                Created <%= time_ago_in_words(a.created_at) %> ago, edited <%= time_ago_in_words(a.updated_at) %> ago
-              </small>
-            </div>
+<h1 class="text-center mt-4">Listing all articles</h1>
+<div class="container">
+  <% @articles.each do |a| %>
+    <div class="row justify-content-md-center">
+      <div class="col-8 mt-4">
+        <div class="card text-center shadow mb-5 bg-white rounded">
+          <div class="card-header font-italic">
+            by Anton Montrezor
+          </div>
+          <div class="card-body">
+            <h5 class="card-title"><%= link_to a.title, article_path(a), class: 'text-success' %></h5>
+            <%# to cut off some part of description and leave a portion to be visible we use truncate method %>
+            <p class="card-text"><%= truncate(a.description, length: 100) %></p>
+            <%= link_to 'View', article_path(a), class: 'btn btn-outline-success' %>
+            <%= link_to 'Edit', edit_article_path(a), class: 'btn btn-outline-info' %>
+            <%# adding confirmation is a user wants to delete an article %>
+            <%= link_to 'Delete', article_path(a), method: :delete, data: {confirm: "Are you sure?"}, class: 'btn btn-outline-danger' %>
+          </div>
+          <div class="card-footer text-muted">
+            <%# using helper method time_ago_in_words to display date in human readable format %>
+            <small>
+              Created <%= time_ago_in_words(a.created_at) %> ago, edited <%= time_ago_in_words(a.updated_at) %> ago
+            </small>
           </div>
         </div>
       </div>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
 </div>
