--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,23 @@
-<h1>Showing article details</h1>
-
-<p><strong>Title: </strong><%= @article.title %></p>
-
-<p><strong>Description: </strong><%= @article.description %></p>
-
-<%# Rails is smart enough to get id from the instance variable in this case %>
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Delete', article_path(@article), method: :delete, data: {confirm: 'Are you sure?'} %> |
-<%= link_to 'Return to article listings', articles_path %>
+<h2 class="text-center mt-4"><%= @article.title %></h2>
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col-8 mt-4">
+      <div class="card text-center shadow mb-5 bg-white rounded">
+        <div class="card-header font-italic">
+          by Anton Montrezor
+        </div>
+        <div class="card-body">
+          <div class="card-text text-left"><%= simple_format(@article.description) %></div>
+          <%= link_to 'Edit', edit_article_path(@article), class: 'btn btn-outline-info' %>
+          <%= link_to 'Delete', article_path(@article), method: :delete, data: {confirm: "Are you sure?"}, class: 'btn btn-outline-danger' %>
+        </div>
+        <div class="card-footer text-muted">
+          <%# using helper method time_ago_in_words to display date in human readable format %>
+          <small>
+            Created <%= time_ago_in_words(@article.created_at) %> ago, edited <%= time_ago_in_words(@article.updated_at) %> ago
+          </small>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
