--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,4 +1,9 @@
- <%# name here will be :notice and msg is a text value of that notice %>
-<% flash.each do |name, msg| %> 
-  <%= msg %>
+<%# name here will be :notice and msg is a text value of that notice %>
+<% flash.each do |name, msg| %>
+  <div class="alert alert-success alert-dismissible fade show mb-0" role="alert">
+    <%= msg %>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 <% end %>
