--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,20 +3,27 @@
 
   <div class="row justify-content-center">
     <div class="col-10">
-      <%= render 'shared/errors', obj: @article %>
+      <%= render 'shared/errors', obj: @user %>
       <%#  having model used will prepopulate inputs with article data, and once clicked to be updated, rails smart enough to direct a user to update action%>
-      <%= form_with(model: @article, class: 'shadow p-3 mb-3 bg-secondary rounded', local: true) do |f|%>
+      <%= form_with(model: @user, class: 'shadow p-3 mb-3 bg-secondary rounded', local: true) do |f|%>
         <div class="form-group row">
-          <%= f.label :title, class: 'col-2 col-form-label text-light' %>
+          <%= f.label :username, class: 'col-2 col-form-label text-light' %>
           <div class="col-10">
-            <%= f.text_field :title, class: 'form-control shadow rounded text-dark', placeholder: 'Title of article' %>
+            <%= f.text_field :username, class: 'form-control shadow rounded text-dark', placeholder: 'Enter a username' %>
           </div>
         </div>
 
         <div class="form-group row">
-          <%= f.label :description, class: 'col-2 col-form-label text-light' %>
+          <%= f.label :email, class: 'col-2 col-form-label text-light' %>
           <div class="col-10">
-            <%= f.text_area :description, rows: 10, placeholder: 'Description of article', class: 'form-control shadow rounded text-dark' %>
+            <%= f.email_field :email, placeholder: 'Enter an email', class: 'form-control shadow rounded text-dark' %>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <%= f.label :password, class: 'col-2 col-form-label text-light' %>
+          <div class="col-10">
+            <%= f.password_field :password, placeholder: 'Choose a password', class: 'form-control shadow rounded text-dark' %>
           </div>
         </div>
 
