--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,6 +1,6 @@
 <%# name here will be :notice and msg is a text value of that notice %>
 <% flash.each do |name, msg| %>
-  <div class="alert alert-success alert-dismissible fade show mb-0" role="alert">
+  <div class="alert alert-<%= name == 'notice' ? 'success' : 'danger' %> alert-dismissible fade show mb-0" role="alert">
     <%= msg %>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
