--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,6 +6,10 @@
         <div class="card-header font-italic">
           by <%= @article.user.username if @article.user %>
           <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
+          <% if @article.categories.any? %>
+          <%# go through a list of categories associated with an article and render each of the _category partial for each category, it will make a category object available inside the partial %>
+            <div class='mt-2'><%= render @article.categories %></div>
+          <% end %>
         </div>
         <div class="card-body">
           <div class="card-text text-left"><%= simple_format(@article.description) %></div>
