--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,7 +11,7 @@
         <div class="card text-center shadow mb-5 bg-white rounded">
           <div class="card-body">
             <h5 class="card-title"><%= link_to category.name, category_path(category), class: 'text-success' %></h5>
-            <%# to cut off some part of description and leave a portion to be visible we use truncate method %>
+            <p class="card-text"><%= pluralize(category.articles.count, 'article') %></p>
           </div>
           <div class="card-footer text-muted">
             <%# using helper method time_ago_in_words to display date in human readable format %>
